--- a/www/style.css
+++ b/www/style.css
@@ -29,13 +29,18 @@
   text-transform: uppercase;
   transform: translateX(-50%);
   left: 50%;
-  top: 108px;
+  top: 80px;
+  width: 80%;
+  font-size: 56px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding: 60px 60px;
 
   color: #ffabba;
   text-align: center;
   text-shadow: 0px 2px 12px #ff517b, 0px 2px 44px #ff003d, 0px 2px 44px #ff008a;
 
-  font-size: 72px;
   font-style: normal;
   font-weight: 400;
   line-height: 48px;
