--- a/www/style.css
+++ b/www/style.css
@@ -1,58 +1,55 @@
 @font-face {
-  font-family: "robot";
-  src: url("./font.ttf");
+  font-family: "Noto Sans";
+  src: url("./NotoSans-Light.ttf");
+}
+
+@font-face {
+  font-family: "Noto Serif Display";
+  src: url("./NotoSerifDisplay-SemiBold.ttf");
 }
 
 #main {
   position: relative;
-  width: 800px;
-  height: 600px;
-  font-family: "robot";
-  background: url("./Game.png");
+  width: 1200px;
+  height: 630px;
+  background: url("./bg.png");
 }
 
-#score {
+#date {
+  font-family: "Noto Sans", monospace;
   position: absolute;
-  text-transform: uppercase;
-  transform: translateX(-50%);
-  left: 50%;
-  top: 24px;
+  font-weight: 300;
+  font-size: 48px;
+  right: 32px;
+  bottom: 30px;
+}
 
-  color: rgba(192, 192, 192, 1);
-  text-shadow: 0px 2px 20px rgba(255, 255, 255, 0.6),
-    0px 2px 44px rgba(255, 255, 255, 0.7);
-  font-size: 12px;
+#logo {
+  position: absolute;
+  width: 212px;
+  right: 32px;
+  bottom: 130px;
 }
 
 #title {
-  width: 80%;
+  width: 1168px;
   max-height: 120px;
-  left: 50%;
-  top: 64px;
+  left: 32px;
+  top: 30px;
   position: absolute;
 
-  transform: translateX(-50%);
+  font-family: "Noto Serif Display", serif;
+  font-style: normal;
+  font-weight: 600;
   text-transform: uppercase;
   font-size: 56px;
   text-overflow: ellipsis;
-
-  color: #ffabba;
-  text-align: center;
-  text-shadow: 0px 2px 12px #ff517b, 0px 2px 44px #ff003d, 0px 2px 44px #ff008a;
-
-  font-style: normal;
-  font-weight: 400;
-  line-height: 64px;
-
-  filter: blur(0.5px);
 }
 
 #post-image {
   position: absolute;
-  text-transform: uppercase;
-  transform: translateX(-50%);
-  left: 50%;
-  bottom: 32px;
-  max-width: 400px;
-  max-height: 300px;
+  left: 32px;
+  bottom: 30px;
+  max-width: 660px;
+  max-height: 410px;
 }
