--- a/www/style.css
+++ b/www/style.css
@@ -12,7 +12,8 @@
   position: relative;
   width: 1200px;
   height: 630px;
-  background: url("./bg.png");
+  background: url("./bg.jpeg");
+  background-size: cover;
 }
 
 #date {
@@ -39,8 +40,7 @@
   position: absolute;
 
   font-family: "Noto Serif Display", serif;
-  font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   text-transform: uppercase;
   font-size: 56px;
   text-overflow: ellipsis;
